--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
                   <h3>Portfolio</h3>
                   <ul class="tech-stack-list">
                       <p class="text-grey"><b>Made with: </b></p>
-                      <li><span class="iconify" data-icon="logos:python" data-inline="false"></span></li>
+                      <li><span class="iconify" data-icon="logos:javascript" data-inline="false"></span></li>
+                      <li><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span><span></span></li>
+                      <li><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span><span></span></li>
                       
                   </ul>
                   <p> A Portfolio which will presents our skills,projects etc.
