--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             ></a></li>
                         <li class="bg-dark-grey"> <a href="https://github.com/inikhilchoudhary" target="_blank"><span class="socials-text">GitHub</span><i class="fab fa-github fa-2x"></i
             ></a></li>
-                        <li class="bg-white"><a class="text-dark-grey" href="mailto:chnikhilmandarng@gmail.com"><span class="socials-text">Email</span><i class="fas fa-envelope fa-2x"></i></a></li>
+                        <li class="bg-white"><a class="text-dark-grey" href="mailto:inikhilchoudhary1@gmail.com"><span class="socials-text">Email</span><i class="fas fa-envelope fa-2x"></i></a></li>
                     </ul>
                     </div>
                 </div>
@@ -258,7 +258,7 @@
                 <div class="card" data-aos="fade-in">
                     <i class="fas fa-envelope"></i>
                     <h3>Gmail</h3>
-            <a href="mailto:chnikhilmandarng@gmail.com" class="text-blue" target="_blank">chnikhilmandarng@gmail.com</a>
+            <a href="mailto:inikhilchoudhary1@gmail.com" class="text-blue" target="_blank">inikhilchoudhary1@gmail.com</a>
                 </div>
                 <div class="card" data-aos="fade-in" data-aos-delay="100">
                     <i class="fab fa-github"></i
@@ -273,7 +273,7 @@
                 </div>
             </div>
 
-            <form id="contact-form" data-aos="zoom-in" data-aos-delay="300" action="https://formspree.io/f/xoqzjdon"" method="POST">
+            <form id="contact-form" data-aos="zoom-in" data-aos-delay="300" action="https://formspree.io/f/xnqypzgo"" method="POST">
                 <h2 class="main-font">Send <span class="text-blue main-font">Email</span></h2>
 
                 <div class="form-group">
@@ -324,7 +324,7 @@
         ></a>
   
         <!-- Gmail -->
-        <a class="btn btn-outline-light btn-floating m-1" href="mailto:chnikhilmandarng@gmail.com" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="mailto:inikhilchoudhary1@gmail.com" role="button"
        ><i class="fas fa-envelope"></i
      ></a>
   
