--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                         
                     </ul>
                     <p>Corona Virus Live Tracker is a small projects which fetch the data from worldometer and shows us the details of corona such as Current Cases,Current Death Ratio
-                        ,Live Cases etc and you can also check it for any country or can download its data file too.
+                        ,Live 
+              Cases etc and you can also check it for any country or can download its data file too.
                     </p>
                     <div class="project-links">
                        
