--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <h2 class="main-font"><span class="text-blue main-font"> My Projects</span></h2>
             <div class="project-row" data-aos="fade-up">
                 <div class="project-left">
-                    <img src="/img/Corona.png" alt="">
+                    <img src="/img/corona.png" alt="">
                 </div>
                 <div class="project-right">
                     <h3>Corona Virus Live Tracker</h3>
@@ -176,7 +176,7 @@
                 </div>
 
                 <div class="project-left">
-                  <img src="/img/Portfolio.PNG" alt="">
+                  <img src="/img/portfolio.png" alt="">
               </div>
                 <div class="project-right">
                   <h3>Portfolio</h3>
@@ -235,7 +235,7 @@
             <div class="education-card" data-aos="zoom-in">
                 <div class="education-card-column">
                     <div class="card-column-image">
-                        <img src="/img/GalgotiasLogo.jpg" alt="">
+                        <img src="/img/galgotiaslogo.jpg" alt="">
                     </div>
 
                     <div class="card-column-large">
