--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
 
                 <div class="project-left">
-                  <img src="/img/portfolio.png" alt="">
+                  <img src="./img/portfolio.png" alt="">
               </div>
                 <div class="project-right">
                   <h3>Portfolio</h3>
@@ -235,7 +235,7 @@
             <div class="education-card" data-aos="zoom-in">
                 <div class="education-card-column">
                     <div class="card-column-image">
-                        <img src="/img/galgotiaslogo.jpg" alt="">
+                        <img src="./img/galgotiaslogo.jpg" alt="">
                     </div>
 
                     <div class="card-column-large">
