--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <h2 class="main-font"><span class="text-blue main-font"> My Projects</span></h2>
             <div class="project-row" data-aos="fade-up">
                 <div class="project-left">
-                    <img src="/img/corona.png" alt="">
+                    <img src="./img/corona.png" alt="">
                 </div>
                 <div class="project-right">
                     <h3>Corona Virus Live Tracker</h3>
