--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                       >Contact</a
                     >
                   </li>
+                    <li>
+                    <a href="Re.pdf" class="link blue-hover"
+                      >Resume</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
