--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   </li>
                     <li>
                     <a href="Re.pdf" class="link blue-hover"
-                      >Resume</a
+                      >Download Resume</a
                     >
                   </li>
                 </ul>
@@ -179,8 +179,7 @@
                 > Code</a>
                     </div>
                 </div>
-                <br>
-                <div class="project-left">
+                <div class="project-bottom">
                   <img src="./img/portfolio.png" alt="">
               </div>
                 <div class="project-right">
