--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 > Code</a>
                     </div>
                 </div>
-                <div class="project-bottom">
+                <div class="project-right">
                   <img src="./img/portfolio.png" alt="">
               </div>
                 <div class="project-right">
