--- a/index.html
+++ b/index.html
@@ -211,10 +211,11 @@
             <ul class="skills-icons">
 
                 <li><span class="iconify" data-icon="logos:python" data-inline="false" data-width="90px" data-height="90px"></span><span>Python</span></li>
+                <li><span class="iconify c-logo" data-icon="logos:c" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">C</span></li>
+                <li><span class="iconify" data-icon="logos:c-plusplus" data-inline="false" data-width="90px" data-height="90px"></span><span>C++</span></li>
                 <li><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false" data-width="90px" data-height="90px"></span><span>HTML</span></li>
                 <li><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false" data-width="90px" data-height="90px"></span><span>CSS</span></li>
                 <li><span class="iconify aws-logo" data-icon="logos:aws" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">Amazon Web <br> Services</span></li>
-                <li><span class="iconify c-logo" data-icon="logos:c" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">C</span></li>
                 <li><span class="iconify ga-logo" data-icon="logos:google-analytics" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">Google <br> Analytics</span></li>
                 <li><span class="iconify gcp-logo" data-icon="logos:google-cloud-platform" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">Google Cloud <br> Platform</span></li>
             </ul>
