--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </li>
               <li>
                 <a href="Re.pdf" download class="link"
-                  ><i class="fas fa-download"></i> Download Resume</a
+                  ><i class="fas fa-download"></i>Resume</a
                 >
               </li>
             </ul>
@@ -104,7 +104,7 @@
                   </li>
                   <li>
                     <a href="Re.pdf" class="link blue-hover"
-                      >Download Resume</a
+                      >Resume</a
                     >
                   </li>
                     
