--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <div class="project-row" data-aos="fade-up">
           <div class="project-item">
             <div class="project-left">
-              <img src="./img/helpu.PNG" alt="">
+              <img src="./img/theboyz.PNG" alt="">
             </div>
             <div class="project-right">
               <h3>Boyz Choice (E-commerce)</h3>
