--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
               </ul>
               <p>My Portfolio is a meticulously crafted project showcasing the creative journey and accomplishments of Nikhil Choudhary. This interactive website features stunning design elements, a comprehensive display of projects, and highlights of skills and experiences. Explore the diverse portfolio and witness the talent and dedication behind each project. </p>
               <div class="project-links">
-                <a href="https://inikhilchoudhary.github.io/myportfolio.github.io/" class="btn-blue-outline btn-small mx-1" target="_blank">
+                <a href="https://nikhilchoudharyportfolio.netlify.app/" class="btn-blue-outline btn-small mx-1" target="_blank">
                   <i class="fas fa-play"></i> Run
                 </a>
-                <a href="https://github.com/inikhilchoudhary/myportfolio.github.io" class="btn-blue-outline btn-small mx-1" target="_blank">
+                <a href="https://github.com/inikhilchoudhary/PortFolio/tree/main" class="btn-blue-outline btn-small mx-1" target="_blank">
                   <i class="fab fa-github"></i> Code
                 </a>
               </div>
@@ -255,7 +255,7 @@
                 <a href="https://theboyzz.netlify.app/" class="btn-blue-outline btn-small mx-1" target="_blank">
                   <i class="fas fa-play"></i> Run
                 </a>
-                <a href="https://github.com/inikhilchoudhary/Ecomm" class="btn-blue-outline btn-small mx-1" target="_blank">
+                <a href="https://github.com/inikhilchoudhary/TheBoyzz" class="btn-blue-outline btn-small mx-1" target="_blank">
                   <i class="fab fa-github"></i> Code
                 </a>
               </div>
