--- a/index.html
+++ b/index.html
@@ -263,6 +263,32 @@
           </div>
         </div>
 
+          
+        <div class="project-row" data-aos="fade-up">
+          <div class="project-item">
+            <div class="project-left">
+              <img src="./img/portfolio.png" alt="">
+            </div>
+            <div class="project-right">
+              <h3>Codify</h3>
+              <ul class="tech-stack-list">
+                <p class="text-grey"><b>Made with: </b></p>
+                <li><span class="iconify" data-icon="vscode-icons:file-type-wordpress" data-inline="false"></span><span></span></li>
+                <li><span class="iconify" data-icon="vscode-icons:file-type-seo" data-inline="false"></span><span></span></li>
+              </ul>
+              <p>My Portfolio is a meticulously crafted project showcasing the creative journey and accomplishments of Nikhil Choudhary. This interactive website features stunning design elements, a comprehensive display of projects, and highlights of skills and experiences. Explore the diverse portfolio and witness the talent and dedication behind each project. </p>
+              <div class="project-links">
+                <a href="https://wecodify.live" class="btn-blue-outline btn-small mx-1" target="_blank">
+                  <i class="fas fa-play"></i> Run
+                </a>
+                <a href="https://github.com/inikhilchoudhary" class="btn-blue-outline btn-small mx-1" target="_blank">
+                  <i class="fab fa-github"></i> Code
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
           
       </div>
