--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
                 <li><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false" data-width="90px" data-height="90px"></span><span>CSS</span></li>
                 <li><span class="iconify aws-logo" data-icon="logos:aws" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">Amazon Web <br> Services</span></li>
                 <li><span class="iconify ga-logo" data-icon="logos:google-analytics" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">Google <br> Analytics</span></li>
+                <li><span class="iconify wordpress-logo" data-icon="logos:wordpress-icon" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">WordPress</span></li>
                 <li><span class="iconify gcp-logo" data-icon="logos:google-cloud-platform" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">Google Cloud <br> Platform</span></li>
             </ul>
         </div>
