--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="project-row" data-aos="fade-up">
           <div class="project-item">
             <div class="project-left">
-              <img src="./img/portfolio.png" alt="">
+              <img src="./img/Codify.png" alt="">
             </div>
             <div class="project-right">
               <h3>Codify</h3>
