--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
               <h3>Codify</h3>
               <ul class="tech-stack-list">
                 <p class="text-grey"><b>Made with: </b></p>
-                <li><span class="iconify" data-icon="vscode-icons:file-type-wordpress" data-inline="false"></span><span></span></li>
-                <li><span class="iconify" data-icon="vscode-icons:file-type-seo" data-inline="false"></span><span></span></li>
+                <li><span class="iconify" data-icon="vscode-icons:file-type-wordpress" data-inline="false"></span><span>WordPress</span></li>
+                <li><span class="iconify" data-icon="vscode-icons:file-type-seo" data-inline="false"></span><span>SEO</span></li>
               </ul>
-              <p>My Portfolio is a meticulously crafted project showcasing the creative journey and accomplishments of Nikhil Choudhary. This interactive website features stunning design elements, a comprehensive display of projects, and highlights of skills and experiences. Explore the diverse portfolio and witness the talent and dedication behind each project. </p>
+              <p>CODIFY is more than just a platform; it's a gateway to endless possibilities in the world of coding. At CODIFY, we believe in empowering aspiring coders with the resources, guidance, and community they need to thrive in the digital age. </p>
               <div class="project-links">
                 <a href="https://wecodify.live" class="btn-blue-outline btn-small mx-1" target="_blank">
                   <i class="fas fa-play"></i> Run
