--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
               <h3>Codify</h3>
               <ul class="tech-stack-list">
                 <p class="text-grey"><b>Made with: </b></p>
-                <li><span class="iconify" data-icon="fa-brands:wordpress" data-inline="false"></span><span>WordPress</span></li>
-                <li><span class="iconify" data-icon="fa-brands:searchengin" data-inline="false"></span><span>SEO</span></li>
+                <li><span class="iconify" data-icon="fa-brands:wordpress" data-inline="false"></span><span></span></li>
+                <li><span class="iconify" data-icon="fa-brands:searchengin" data-inline="false"></span><span></span></li>
               </ul>
               <p>CODIFY is more than just a platform; it's a gateway to endless possibilities in the world of coding. At CODIFY, we believe in empowering aspiring coders with the resources, guidance, and community they need to thrive in the digital age. </p>
               <div class="project-links">
