--- a/index.html
+++ b/index.html
@@ -308,15 +308,13 @@
             <ul class="skills-icons">
 
                 <li><span class="iconify" data-icon="logos:python" data-inline="false" data-width="90px" data-height="90px"></span><span>Python</span></li>
+                <li><span class="iconify django-logo" data-icon="simple-icons:django" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">Django</span></li>
                 <li><span class="iconify" data-icon="fa-solid:desktop" data-inline="false" data-width="90px" data-height="90px"></span><span>GUI</span></li>                
-                <li><span class="iconify c-logo" data-icon="logos:c" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">C</span></li>
                 <li><span class="iconify" data-icon="logos:c-plusplus" data-inline="false" data-width="90px" data-height="90px"></span><span>C++</span></li>
                 <li><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false" data-width="90px" data-height="90px"></span><span>HTML</span></li>
                 <li><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false" data-width="90px" data-height="90px"></span><span>CSS</span></li>
-                <li><span class="iconify aws-logo" data-icon="logos:aws" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">Amazon Web <br> Services</span></li>
-                <li><span class="iconify ga-logo" data-icon="logos:google-analytics" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">Google <br> Analytics</span></li>
                 <li><span class="iconify wordpress-logo" data-icon="logos:wordpress-icon" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">WordPress</span></li>
-                <li><span class="iconify gcp-logo" data-icon="logos:google-cloud-platform" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">Google Cloud <br> Platform</span></li>
+                <li><span class="iconify mysql-logo" data-icon="simple-icons:mysql" data-inline="false" data-width="90px" data-height="90px"></span><span class="text-center">MySQL</span></li>
             </ul>
         </div>
 
@@ -343,7 +341,7 @@
                         <h4>Galgotias University - Bachelor of Technology</h4>
                         <ul>
                             <li>Major in computer science</li>
-                            <li>Batch - 2020-24</li>
+                            <li>Batch - 2020-2024</li>
                         </ul>
                     </div>
                 </div>
