--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               Hi, I'm <span class="main-font text-blue">Nikhil</span>
             </h1>
             <p class="student" id="student">
-              I'm currently a student in <a href="https://www.galgotiasuniversity.edu.in/" class="blue-link-underline" target="_blank">Galgotias University.</a> I spend my day-to-day by learning and exploring new things.
+              Graduated in B.Tech in CSE from <a href="https://www.galgotiasuniversity.edu.in/" class="blue-link-underline" target="_blank">Galgotias University.</a> I spend my day-to-day by learning and exploring new things.
                             
                             </p>
                             <div class="hero-btns">
